--- a/assets/custom-tailwind.css
+++ b/assets/custom-tailwind.css
@@ -1,4 +1,5 @@
 /** Typography styles **/
+.h0,
 .h1,
 .h2,
 .h3,
@@ -6,6 +7,10 @@
 .badge,
 h3.inline-richtext {
   @apply twcss-font-bold !important;
+}
+
+.page-title.h0 {
+  text-align: center;
 }
 
 .full-unstyled-link:hover {
@@ -210,6 +215,7 @@ form#bh-sl-user-location .scasl-search-btn {
 .product-title {
   @apply twcss-mb-4;
 }
+
 /** Ingredient filter list **/
 .alpha-list-group {
   @apply twcss-grid twcss-grid-cols-1 md:twcss-grid-cols-3 twcss-gap-32 twcss-list-none md:twcss-auto-rows-fr;
@@ -219,6 +225,7 @@ form#bh-sl-user-location .scasl-search-btn {
   @apply md:twcss-w-1/2 twcss-m-auto;
 }
 
+/** Alphabet filter **/
 .character-element {
   @apply twcss-cursor-pointer;
 }
@@ -234,11 +241,11 @@ form#bh-sl-user-location .scasl-search-btn {
 }
 
 .ingredient-card__title {
-  @apply twcss-row-start-1 twcss-row-end-2 twcss-pb-4;
+  @apply twcss-row-start-1 twcss-row-end-2;
 }
 
 .ingredient-card__description {
-  @apply twcss-row-start-2 twcss-row-end-3 twcss-border-b twcss-overflow-hidden twcss-pb-4;
+  @apply twcss-row-start-2 twcss-row-end-3 twcss-border-b twcss-overflow-hidden;
 }
 
 .ingredients-card__benefits {
@@ -261,6 +268,7 @@ form#bh-sl-user-location .scasl-search-btn {
   @apply twcss-mr-1;
 }
 
+/** Newsletter **/
 .newsletter__wrapper {
   @apply md:twcss-flex md:twcss-justify-between;
 }
