--- a/assets/custom-tailwind.css
+++ b/assets/custom-tailwind.css
@@ -249,7 +249,6 @@ form#bh-sl-user-location .scasl-search-btn {
 }
 
 .card__content {
-  @apply twcss-px-4 !important;
 }
 
 .collection__title {
@@ -335,4 +334,9 @@ form#bh-sl-user-location .scasl-search-btn {
 
 .button::after {
   @apply twcss-shadow-none !important;
+}
+
+ul.collection-list .card__information,
+ul.collection-list .card__content {
+  @apply twcss-px-0 !important;
 }
